Refactor security components: remove Keycloak integration classes and handlers
- Deleted CustomLogoutHandler, KeycloakAdminService, KeycloakAuthenticationProvider, KeycloakJwtAuthenticationConverter, KeycloakLogoutSuccessHandler, OAuth2AuthenticationSuccessHandler, JwtService, and LdapService.
- Updated application-keycloak.yaml and application.yaml to reflect changes in Keycloak configuration and removed unnecessary properties.
- Streamlined security configuration by removing deprecated classes and consolidating Keycloak settings.